deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: repower-database
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: repower-database
  type: ClusterIP
